# mcp-kubernetes

./: Cargo.toml  README.md  renovate.json
src/: main.rs
