[package]
name = "mcp-kubernetes"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "0.98", features = [
    "runtime",
    "derive",
    "client",
    "rustls-tls",
] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }
serde_json = { version = "~1" }
tokio = { version = "~1", features = ["full"] }
mcpr = { git = "https://github.com/conikeec/mcpr.git", branch = "master" }
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"
futures = "0.3"
