[package]
name = "mcp-kubernetes"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "~0", features = [
    "runtime",
    "derive",
    "client",
    "rustls-tls",
] }
k8s-openapi = { version = "0.25.0", features = [
    "latest",
] } # needs to be pinned to a specific version
serde_json = { version = "~1" }
tokio = { version = "~1", features = ["full"] }
mcpr = { git = "https://github.com/conikeec/mcpr.git", branch = "master" }
log = "~0"
env_logger = "~0"
